<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context="com.example.vv.quicknote.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="false"
            android:text="@string/button_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_Backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/button_modify"
            android:layout_toEndOf="@id/button_delete"
            android:text="@string/button_backup"
            app:layout_constraintEnd_toStartOf="@id/button_search"
            app:layout_constraintStart_toEndOf="@id/button_delete"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            app:layout_constraintEnd_toStartOf="@id/button_modify"
            app:layout_constraintStart_toEndOf="@id/button_Backup"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/button_modify_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/input_qnotes"
            android:importantForAutofill="no"
            android:minLines="3"
            android:textSize="13sp" />
    </ScrollView>

</LinearLayout>
